# liquid-cache

./: .gitignore  AGENTS.md  BUG_ANALYSIS.md  Cargo.toml  README.md  SUMMARY.md  clippy.toml  fix_duplicate_bug.patch  flake.nix  minimal_reproduction.rs  rust-toolchain.toml  test_duplicate_bug.rs  test_fix.rs
benchmark/: .gitignore  Cargo.toml  README.md  bench_server.rs  cache_behavior.rs  data_pruning_local_runner.rs  data_pruning_runner.rs  in_process.rs  microbench_sequential_read.rs  minimal_client.rs  minimal_server.rs  parse_bpfcc.py  parse_client_logs.py  parse_disk_usage.py  parse_latency_bw.py  query_19-26.sql  run_disk_usage_experiment.sh  run_latency_exp.sh  run_read_microbenchmark.sh  setup_benchmarks.sh  simple_manifest.json
benchmark/answers/clickbench_0/: Q10.parquet  Q11.parquet  Q16.parquet  Q18.parquet  Q20.parquet  Q21.parquet  Q23.parquet  Q31.parquet  Q8.parquet  Q9.parquet
benchmark/bitpacking/: bitpacking.rs
benchmark/clickbench/: clickbench.json  clickbench_client.rs  manifest.json
benchmark/clickbench/official_traces/: cache-trace-clickbench-q0.parquet  cache-trace-clickbench-q1.parquet  cache-trace-clickbench-q10.parquet  cache-trace-clickbench-q11.parquet  cache-trace-clickbench-q12.parquet  cache-trace-clickbench-q13.parquet  cache-trace-clickbench-q14.parquet  cache-trace-clickbench-q15.parquet  cache-trace-clickbench-q16.parquet  cache-trace-clickbench-q17.parquet  cache-trace-clickbench-q18.parquet  cache-trace-clickbench-q19.parquet  cache-trace-clickbench-q2.parquet  cache-trace-clickbench-q20.parquet  cache-trace-clickbench-q21.parquet  cache-trace-clickbench-q22.parquet  cache-trace-clickbench-q23.parquet  cache-trace-clickbench-q24.parquet  cache-trace-clickbench-q25.parquet  cache-trace-clickbench-q26.parquet  cache-trace-clickbench-q27.parquet  cache-trace-clickbench-q28.parquet  cache-trace-clickbench-q29.parquet  cache-trace-clickbench-q3.parquet  cache-trace-clickbench-q30.parquet  cache-trace-clickbench-q31.parquet  cache-trace-clickbench-q32.parquet  cache-trace-clickbench-q35.parquet  cache-trace-clickbench-q36.parquet  cache-trace-clickbench-q37.parquet  cache-trace-clickbench-q38.parquet  cache-trace-clickbench-q39.parquet  cache-trace-clickbench-q4.parquet  cache-trace-clickbench-q40.parquet  cache-trace-clickbench-q41.parquet  cache-trace-clickbench-q42.parquet  cache-trace-clickbench-q5.parquet  cache-trace-clickbench-q6.parquet  cache-trace-clickbench-q7.parquet  cache-trace-clickbench-q8.parquet  (+1 more)
benchmark/clickbench/queries/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q23.sql  q24.sql  q25.sql  q26.sql  q27.sql  q28.sql  q29.sql  q3.sql  q30.sql  q31.sql  q32.sql  q33.sql  q34.sql  q35.sql  q36.sql  q37.sql  q38.sql  q39.sql  q4.sql  q40.sql  q41.sql  q42.sql  q5.sql  q6.sql  q7.sql  (+3 more)
benchmark/criterion/: liquid_float_array.rs
benchmark/disk_monitor/: disk_monitor.rs
benchmark/fio/: .gitignore  extract_max_fio_bw.py  fio_test.ini
benchmark/job/: convert_to_parquet.py  download_job_dataset.sh
benchmark/json_bench/: manifest.bluesky.json
benchmark/json_bench/queries/: q1.sql  q2.sql  q3.sql  q4.sql  q5.sql
benchmark/publicBI/: convert_to_parquet.py  download_and_extract_publicBI.sh  download_sql_tables.txt
benchmark/src/: admin_server.rs  client_runner.rs  convert_parquet.rs  inprocess.rs  inprocess_runner.rs  lib.rs  manifest.rs  observability.rs  reports.rs  runner.rs  simplify_query.rs  storage_runner.rs  tpch.rs  tracepoints.rs  utils.rs
benchmark/src/eviction/: eviction_cache.rs  mod.rs
benchmark/stackoverflow/: manifest.dba.json  manifest.json  manifest.math.json  schema.sql  setup_stackoverflow.py
benchmark/stackoverflow/queries/: q1.sql  q10.sql  q3.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
benchmark/tpcds/: .gitignore  fetch_queries.py  manifest.all.json  manifest.json  manifest.muted.json  manifest_notes.txt  tpcds_client.rs  tpcds_gen.py  tpcds_notes.md
benchmark/tpch/: csv_to_parquet.py  fail_tpch.py  manifest.json  parquet_to_orc.py  tpch_client.rs  tpch_gen.py  tpch_gen.rs  tpch_gen.sh  tpch_inprocess.rs
benchmark/tpch/queries/: q10.sql  q3.sql
dev/dev-tools/: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md
dev/dev-tools/assets/: tailwind.css
dev/dev-tools/src/: main.rs
examples/: Cargo.toml  README.md  client.rs  example_client.rs  example_inprocess.rs  example_inprocess_cache_eviction.rs  example_inprocess_insertion.rs  example_inprocess_read.rs  example_local.rs  example_projection_pushdown.rs  example_server.rs  example_shell.rs  nano_hits.parquet  server.rs  small_hits.parquet
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fsst_view.rs
scripts/: Cargo.toml  generate_tpch.py  generate_tpch.rs
src/cache/: Cargo.toml  README.md  mod.rs  service.rs  utils.rs
src/cache/src/: lib.rs  utils.rs
src/client/: Cargo.toml  README.md  exec.rs  metrics.rs  mod.rs  sql.rs
src/client/src/: client_exec.rs  exec.rs  lib.rs  metrics.rs  optimizer.rs  sql.rs
src/common/: Cargo.toml  README.md
src/common/src/: io_mode.rs  lib.rs  mock_store.rs  rpc.rs  utils.rs
src/datafusion/: Cargo.toml  README.md  clippy.toml
src/datafusion-local/: Cargo.toml  README.md
src/datafusion-local/src/: lib.rs
src/datafusion-server/: Cargo.toml  README.md
src/datafusion-server/src/: errors.rs  lib.rs  service.rs
src/datafusion/bench/: boolean_and_then.rs  filter_pushdown.rs
src/datafusion/src/: lib.rs  utils.rs
src/liquid_parquet/: Cargo.toml  README.md  exec.rs  mod.rs  opener.rs  page_filter.rs  row_filter.rs
src/liquid_parquet/bench/: bench_eviction.rs  bitpacking.rs  boolean_and_then.rs  byte_array_vs_byte_view.rs  eviction_cache.rs  filter_pushdown.rs  fsstarray.rs  liquid_float_array.rs  reuse_analysis.rs  trace_visualization.rs
src/liquid_parquet/cache/: iter.rs  lock_spec.rs  mod.rs  stats.rs  (+1 more)
src/local/: Cargo.toml  README.md
src/parquet/: Cargo.toml  README.md
src/server/: Cargo.toml  README.md  mod.rs  service.rs
src/storage/: Cargo.toml  README.md
(+574 files in other folders)
