[workspace.package]
version = "0.1.10"
edition = "2024"
repository = "https://github.com/XiangpengHao/liquid-cache"
authors = ["XiangpengHao <xiangpeng.hao@wisc.edu>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "10x lower latency for cloud-native DataFusion"


[workspace]
members = [
	"benchmark",
	"src/server",
	"src/client",
	"src/parquet",
	"src/common",
	"src/storage",
	"src/local",
	"examples",
	"fuzz",
]
resolver = "3"

[workspace.dependencies]
liquid-cache-server = { path = "src/server", version = "0.1.10" }
liquid-cache-client = { path = "src/client", version = "0.1.10" }
liquid-cache-parquet = { path = "src/parquet", version = "0.1.10" }
liquid-cache-common = { path = "src/common", version = "0.1.10" }
liquid-cache-storage = { path = "src/storage", version = "0.1.10" }
liquid-cache-local = { path = "src/local", version = "0.1.10" }
arrow = { version = "57.0.0", default-features = false, features = [
	"prettyprint",
] }
arrow-flight = { version = "57.0.0", features = ["flight-sql-experimental"] }
arrow-schema = { version = "57.0.0", features = ["serde"] }
parquet = { version = "57.0.0", features = ["async", "experimental"] }
datafusion = { version = "51.0.0" }
datafusion-proto = { version = "51.0.0" }
async-trait = "0.1.89"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
log = "0.4.28"
tonic = { version = "0.14.1" }
url = "2.5.7"
bytes = { version = "1.10.1", default-features = false }
ahash = "0.8.12"
prost = "0.14.1"
object_store = { version = "0.12.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }
fastrace = "0.7"
fastrace-tonic = "0.1"
congee = "0.4.1"

[workspace.metadata.cargo-shear]
ignored = ["kani-verifier"]

[profile.dev.package]
insta.opt-level = 3

[patch.crates-io]
datafusion = { git = "https://github.com/apache/datafusion.git", branch = "main" }
datafusion-proto = { git = "https://github.com/apache/datafusion.git", branch = "main" }
