[workspace.package]
version = "0.1.10"
edition = "2024"
repository = "https://github.com/XiangpengHao/liquid-cache"
authors = ["XiangpengHao <xiangpeng.hao@wisc.edu>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "10x lower latency for cloud-native DataFusion"


[workspace]
members = [
	"benchmark",
	"src/datafusion-server",
	"src/datafusion-client",
	"src/datafusion",
	"src/common",
	"src/core",
	"src/datafusion-local",
	"examples",
	"fuzz",
	"dev/dev-tools",
]
resolver = "3"

[workspace.dependencies]
liquid-cache-datafusion-server = { path = "src/datafusion-server", version = "0.1.10" }
liquid-cache-datafusion-client = { path = "src/datafusion-client", version = "0.1.10" }
liquid-cache-datafusion = { path = "src/datafusion", version = "0.1.10" }
liquid-cache-common = { path = "src/common", version = "0.1.10" }
liquid-cache = { path = "src/core", version = "0.1.10" }
liquid-cache-datafusion-local = { path = "src/datafusion-local", version = "0.1.10" }
arrow = { version = "57.3.0", default-features = false, features = [
	"prettyprint",
] }
arrow-flight = { version = "57.3.0", features = ["flight-sql-experimental"] }
arrow-schema = { version = "57.3.0", features = ["serde"] }
parquet = { version = "57.3.0", features = [
	"async",
	"experimental",
	"variant_experimental",
] }
parquet-variant-json = { version = "57.3.0" }
parquet-variant-compute = { version = "57.3.0" }
datafusion = { version = "52.1.0" }
datafusion-proto = { version = "52.1.0" }
async-trait = "0.1.89"
futures = { version = "0.3.32", default-features = false, features = ["std"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
log = "0.4.29"
tonic = { version = "0.14.5" }
url = "2.5.8"
bytes = { version = "1.11.1", default-features = false }
ahash = "0.8.12"
prost = "0.14.3"
object_store = { version = "0.12.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tempfile = "3.25.0"
uuid = { version = "1.21.0", features = ["v4"] }
fastrace = "0.7"
fastrace-tonic = "0.1"
congee = "0.4.1"
insta = "1.46.3"

[workspace.metadata.cargo-shear]
ignored = ["kani-verifier"]

[profile.dev.package]
insta.opt-level = 3
