[package]
name = "liquid-cache-benchmarks"
description = "LiquidCache Benchmarks"
edition = { workspace = true }
publish = false

[dependencies]
liquid-cache-server = { workspace = true }
liquid-cache-client = { workspace = true }
liquid-cache-parquet = { workspace = true }
liquid-cache-storage = { workspace = true }
liquid-cache-common = { workspace = true }
liquid-cache-local = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.5.47", features = ["derive"] }
url = { workspace = true }
mimalloc = "0.1.48"
serde_json.workspace = true
serde.workspace = true
sysinfo = { version = "0.37.0", default-features = false, features = [
	"network",
	"disk",
] }
object_store = { workspace = true, features = ["http"] }
fsst-rs = "0.5.3"
parquet = { workspace = true }
fastrace = { version = "0.7.14", features = ["enable"] }
fastrace-tonic = { workspace = true }
fastrace-opentelemetry = "0.13"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic"] }
logforth = { version = "0.27.0", features = ["append-opentelemetry"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = { workspace = true }
pprof = { version = "0.15.0", features = ["flamegraph"] }
anyhow = "1.0"

[[bin]]
name = "clickbench_client"
path = "clickbench/clickbench_client.rs"

[[bin]]
name = "tpch_client"
path = "tpch/tpch_client.rs"

[[bin]]
name = "tpch_inprocess"
path = "tpch/tpch_inprocess.rs"

[[bin]]
name = "bench_server"
path = "bench_server.rs"

[[bin]]
name = "cache_behavior"
path = "cache_behavior.rs"

[[bin]]
name = "in_process"
path = "in_process.rs"
