[package]
name = "liquid-cache-benchmarks"
description = "LiquidCache Benchmarks"
edition = { workspace = true }
publish = false

[dependencies]
liquid-cache-server = { workspace = true }
liquid-cache-client = { workspace = true }
liquid-cache-parquet = { workspace = true }
liquid-cache-storage = { workspace = true }
liquid-cache-common = { workspace = true }
liquid-cache-local = { workspace = true }
datafusion = { workspace = true }
datafusion-sql = { version = "47.0.0", features=["unparser"] }
tokio = { workspace = true }
log = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
url = { workspace = true }
mimalloc = "0.1.48"
serde_json.workspace = true
serde.workspace = true
sysinfo = { version = "0.37.2", default-features = false, features = [
	"network",
	"disk",
] }
object_store = { workspace = true, features = ["http"] }
fsst-rs = "0.5.4"
parquet = { workspace = true }
fastrace = { version = "0.7.14" }
fastrace-tonic = { workspace = true }
fastrace-opentelemetry = "0.13"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic"] }
logforth = { version = "0.27.0", features = ["append-opentelemetry"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
uuid = { version = "1.18.1", features = ["v4"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }
anyhow = "1.0"
fastrace-futures = "0.7"
futures = { workspace = true }

[features]
trace = ["fastrace/enable"]

[[bin]]
name = "clickbench_client"
path = "clickbench/clickbench_client.rs"

[[bin]]
name = "tpch_client"
path = "tpch/tpch_client.rs"

[[bin]]
name = "bench_server"
path = "bench_server.rs"

[[bin]]
name = "in_process"
path = "in_process.rs"

[[bin]]
name = "simplify_query"
path = "src/simplify_query.rs"

[[bin]]
name = "convert_parquet"
path = "src/convert_parquet.rs"

[[bin]]
name = "create_manifest"
path = "src/bin/create_manifest.rs"