[package]
name = "liquid-cache-benchmarks"
description = "LiquidCache Benchmarks"
edition = { workspace = true }
publish = false

[dependencies]
liquid-cache-datafusion-server = { workspace = true }
liquid-cache-datafusion-client = { workspace = true }
liquid-cache-datafusion = { workspace = true }
liquid-cache = { workspace = true }
liquid-cache-common = { workspace = true }
liquid-cache-datafusion-local = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
url = { workspace = true }
mimalloc = "0.1.50"
serde_json.workspace = true
serde.workspace = true
sysinfo = { version = "0.38.4", default-features = false, features = [
	"network",
	"disk",
] }
object_store = { workspace = true, features = ["http"] }
parquet = { workspace = true }
arrow = { workspace = true }
fastrace = { version = "0.7.17" }
fastrace-tonic = { workspace = true }
fastrace-opentelemetry = "0.16"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["trace", "grpc-tonic"] }
logforth = { version = "0.29.1", features = ["append-opentelemetry", "bridge-log"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
uuid = { version = "1.23.1", features = ["v4"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }
anyhow = "1.0"
usdt = "0.6"
regex = "1.12.3"
perf-event2 = "0.7.4"

[features]
trace = ["fastrace/enable"]

[[bin]]
name = "clickbench_client"
path = "clickbench/clickbench_client.rs"

[[bin]]
name = "tpch_client"
path = "tpch/tpch_client.rs"

[[bin]]
name = "tpcds_client"
path = "tpcds/tpcds_client.rs"

[[bin]]
name = "bench_server"
path = "bench_server.rs"

[[bin]]
name = "in_process"
path = "in_process.rs"
