[package]
name = "examples"
edition = { workspace = true }
publish = false

[[bin]]
name = "example_server"
path = "example_server.rs"

[[bin]]
name = "example_client"
path = "example_client.rs"

[[bin]]
name = "example_local"
path = "example_local.rs"

[dependencies]
datafusion = { workspace = true }
liquid-cache-server = { workspace = true }
liquid-cache-client = { workspace = true }
liquid-cache-local = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
env_logger = "0.11.8"
url = { workspace = true }
tempfile = "3.20.0"
clap = { version = "4.5.38", features = ["derive"] }
object_store = { workspace = true, features = ["http"] }
