[package]
name = "examples"
edition = { workspace = true }
publish = false

[[bin]]
name = "example_server"
path = "example_server.rs"

[[bin]]
name = "example_client"
path = "example_client.rs"

[[bin]]
name = "example_local"
path = "example_local.rs"

[dependencies]
datafusion = { workspace = true }
liquid-cache-server = { workspace = true }
liquid-cache-client = { workspace = true }
liquid-cache-local = { workspace = true }
tokio = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }
tempfile = "3.20.0"
clap = { version = "4.5.45", features = ["derive"] }
object_store = { workspace = true, features = ["http"] }
