[package]
name = "examples"
edition = { workspace = true }
publish = false

[[bin]]
name = "example_server"
path = "example_server.rs"

[[bin]]
name = "example_client"
path = "example_client.rs"

[[bin]]
name = "example_local"
path = "example_local.rs"

[[bin]]
name = "example_projection_pushdown"
path = "example_projection_pushdown.rs"

[[bin]]
name = "example_inprocess_insertion"
path = "example_inprocess_insertion.rs"

[[bin]]
name = "example_inprocess_cache_eviction"
path = "example_inprocess_cache_eviction.rs"

[[bin]]
name = "example_inprocess_read"
path = "example_inprocess_read.rs"

[dependencies]
datafusion = { workspace = true }
liquid-cache-datafusion-server = { workspace = true }
liquid-cache-datafusion-client = { workspace = true }
liquid-cache-datafusion-local = { workspace = true }
tokio = { workspace = true }
arrow-flight = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }
tempfile = "3.25.0"
clap = { version = "4.5.60", features = ["derive"] }
object_store = { workspace = true, features = ["http"] }
