[package]
name = "liquid-cache-store"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }


[dependencies]
async-stream = "0.3.6"
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
tokio = { workspace = true, features = ["fs"] }
liquid-cache-common.workspace = true

[dev-dependencies]
tempfile.workspace = true
