[package]
name = "liquid-cache-client"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
liquid-cache-common = { workspace = true }
fastrace = { workspace = true }
fastrace-tonic = { workspace = true }
fastrace-futures = { workspace = true }
tower = "0.5.2"
tokio = { workspace = true }

[dev-dependencies]
insta = { version = "1.43.1" }
