[package]
name = "liquid-cache-client"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
liquid-cache-common = { workspace = true }
fastrace = { workspace = true }
fastrace-tonic = { workspace = true }
tower = "0.5.3"
tokio = { workspace = true }
object_store = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
