[package]
name = "liquid-cache-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = "0.4.41"
futures = { workspace = true }
object_store = { workspace = true }
parking_lot = "0.12.4"
prost = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.12"
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
