[package]
name = "liquid-cache-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow-flight = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = "0.4.42"
futures = { workspace = true }
object_store = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.16"
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
