[package]
name = "liquid-cache-datafusion-local"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }


[dependencies]
liquid-cache-common = { workspace = true }
liquid-cache = { workspace = true }
liquid-cache-datafusion = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
tokio = { workspace = true }
fastrace = { workspace = true }
t4 = { workspace = true }
pollster = { workspace = true }


[dev-dependencies]
insta = { workspace = true }
tempfile = "3.25.0"
parquet = { workspace = true }
