[package]
name = "liquid-cache-datafusion-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }


[dependencies]
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
liquid-cache-datafusion = { workspace = true }
object_store = { workspace = true, features = ["aws", "http"] }
liquid-cache-common = { workspace = true }
tempfile = { workspace = true }
axum = "0.8.8"
serde = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }
sysinfo = { version = "0.38.2", default-features = false, features = [
	"component",
	"disk",
	"network",
	"system",
	"user",
] }
uuid = { workspace = true }
fastrace = { workspace = true }
pprof = { version = "0.15.0", features = ["flamegraph"] }
anyhow = "1.0"
liquid-cache = { workspace = true }
hdrhistogram = "7.5.4"

[dev-dependencies]
insta = { workspace = true }
parquet = { workspace = true }
