[package]
name = "liquid-cache-parquet"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
ahash = { workspace = true }
fsst-rs = "0.5.2"
serde = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
object_store = { workspace = true, features = ["http"] }
itertools = { workspace = true }
fastlanes = "0.2.0"
num-traits = "0.2.19"
zerocopy = { version = "0.8.25", features = ["derive"] }
liquid-cache-common = { workspace = true }
fastrace = { workspace = true }
fastrace-futures = { workspace = true }
congee = { workspace = true }
thrift = { version = "0.17.0", default-features = false }

[dev-dependencies]
tempfile = "3.20.0"
divan = "0.1"
rand = "0.9.1"
shuttle = "0.8.0"
tracing-subscriber = "0.3.19"
paste = "1.0.15"
insta = { version = "1.43.1" }
anyhow = "1.0"
serde_json = { workspace = true }
mimalloc = "0.1.46"

[features]
shuttle = []


[[bench]]
name = "bitpacking"
path = "bench/bitpacking.rs"
harness = false

[[bench]]
name = "liquid_float_array"
harness = false
path = "bench/liquid_float_array.rs"

[[bench]]
name = "boolean_and_then"
harness = false
path = "bench/boolean_and_then.rs"

[[bench]]
name = "bench_eviction"
path = "bench/bench_eviction.rs"

[[bench]]
name = "fsstarray"
path = "bench/fsstarray.rs"
harness = false

[[bench]]
name = "filter_pushdown"
path = "bench/filter_pushdown.rs"
harness = false

[[bench]]
name = "byte_array_vs_byte_view"
path = "bench/byte_array_vs_byte_view.rs"
harness = false

[[bench]]
name = "fsst_view_study"
path = "study/fsst_view.rs"
harness = false
