[package]
name = "liquid-cache-local"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = { workspace = true }
repository = { workspace = true }


[dependencies]
liquid-cache-common = { workspace = true }
liquid-cache-storage = { workspace = true }
liquid-cache-parquet = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
tokio = { workspace = true }
fastrace = { workspace = true }


[dev-dependencies]
insta = { workspace = true }
tempfile = "3.25.0"
parquet = { workspace = true }
