[package]
name = "liquid-cache-parquet"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
ahash = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
object_store = { workspace = true, features = ["http"] }
liquid-cache-common = { workspace = true }
liquid-cache-storage = { workspace = true }
fastrace = { workspace = true }
thrift = { version = "0.17.0", default-features = false }

[dev-dependencies]
tempfile = "3.23.0"
divan = "0.1"
rand = "0.9.2"
shuttle = "0.8.1"

[features]
shuttle = []


[[bench]]
name = "bench_eviction"
path = "bench/bench_eviction.rs"

[[bench]]
name = "filter_pushdown"
path = "bench/filter_pushdown.rs"
harness = false

[[bench]]
name = "boolean_and_then"
harness = false
path = "bench/boolean_and_then.rs"
